/cp 2013-04-24  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/56970
	* init.c (build_offset_ref): Add tsubst_flags_t parameter.
	* semantics.c (finish_qualified_id_expr): Likewise.
	(finish_id_expression): Update.
	* typeck.c (cp_build_addr_expr_1): Likewise.
	* pt.c (tsubst_qualified_id, resolve_nondeduced_context): Likewise.
	* cp-tree.h: Update declarations.

/testsuite
2013-04-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56970
	* g++.dg/cpp0x/sfinae45.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198232 138bc75d-0d04-0410-961f-82ee72b054a4